--- a/rhv-tower-ansible-test.yml
+++ b/rhv-tower-ansible-test.yml
@@ -13,8 +13,5 @@
 
   - name: Logout from oVirt
     ovirt_auth:
-      url: "{{ lookup('env','OVIRT_URL') }}"
-      username: "{{ lookup('env','OVIRT_USERNAME') }}"
-      password: "{{ lookup('env','OVIRT_PASSWORD') }}"
-      ca_file: "{{ lookup('env','OVIRT_CAFILE') }}"
+      ovirt_auth: "{{ ovirt_auth }}"
       state: absent
