--- a/failure/fail-prod-gluster-glusterd.yml
+++ b/failure/fail-prod-gluster-glusterd.yml
@@ -4,6 +4,8 @@
       systemd:
         state: stopped
         name: glusterd
+      when: answer
 
     - name: Kill running glusterfs processes
       command: pkill glusterfs
+      when: answer
