--- a/failover/failover-dr-gluster.yml
+++ b/failover/failover-dr-gluster.yml
@@ -1,4 +1,14 @@
 ---
+- hosts: DR-RHVH[0]
+  tags:
+    - fail_over 
+
+  tasks:
+  - name: Release SD locks (only for demo)
+    import_role:
+      name: gluster
+      tasks_from: release_lock.yml
+      
 - hosts: DR-Gluster[0]
   tags:
     - fail_over
