--- a/failback/reverse-georep.yml
+++ b/failback/reverse-georep.yml
@@ -5,4 +5,4 @@
   - name: Reverse geo-replication
     import_role:
       name: gluster
-      tasks_from: initial_failback_sync.yml
+      tasks_from: initial-failback-sync.yml
