--- a/failback/gluster/roles/tasks/failback.yml
+++ b/failback/gluster/roles/tasks/failback.yml
@@ -7,7 +7,7 @@
   command: "python /usr/share/glusterfs/scripts/schedule_georep.py rhv-sd1-dr gluster01.example.com rhv-sd1"
 
 - name: Stop Geo-Replication from Secondary to Primary
-  command: "gluster volume geo-replication rhv-sd1-dr gluster01.example.com::rhv-sd1-dr stop"
+  command: "gluster volume geo-replication rhv-sd1-dr gluster01.example.com::rhv-sd1 stop"
 
 - name: Delete Geo-Replication Session
   command: "gluster volume geo-replication rhv-sd1-dr gluster01.example.com::rhv-sd1 delete"
@@ -17,3 +17,6 @@
 
 - name: Reset Geo-Replication changelog
   command: "gluster volume reset rhv-sd1-dr changelog"
+  
+#- name: Start Geo-Replication from Primary to Secondary
+#  command: "gluster volume geo-replication rhv-sd1 dr-gluster01.example.com::rhv-sd1-dr start"
