--- a/failure/fail-prod-rhv-gluster.yml
+++ b/failure/fail-prod-rhv-gluster.yml
@@ -6,7 +6,7 @@
     SLAVE_VOL: rhv-sd1-dr
     
   tasks:
-    - name: Simulating geo-replication fail
+    - name: Force geo-replication to secondary site
       command: python /usr/share/glusterfs/scripts/schedule_georep.py {{ MASTER_VOL }} {{ PRIMARY_SLAVE_HOST }} {{ SLAVE_VOL }} 
 
 - hosts: Gluster
