--- a/failure/start-prod-rhv-gluster.yml
+++ b/failure/start-prod-rhv-gluster.yml
@@ -5,7 +5,19 @@
  
   tasks:
     - name: Start glusterd
-      command: systemctl start glusterd
+      systemd:
+        state: started
+        name: glusterd
+
+    - name: Pause to ensure glusterd is started
+      pause:
+        seconds: 5
+
+    - name: Restart glusterfssharedstorage service
+      systemd:
+        state: restarted
+        name: glusterfssharedstorage
+
 
 - hosts: RHVM
   vars:
