include task to reboot hypervisors

--- a/failure/fail-prod-rhv-gluster.yml
+++ b/failure/fail-prod-rhv-gluster.yml
@@ -35,3 +35,13 @@
       systemd:
         state: stopped
         name: ovirt-engine
+ 
+- hosts: RHVH
+  vars:
+    ansible_user: root
+
+  tasks:
+    - name: reboot host
+      shell: sleep 10 && /sbin/shutdown -r now
+      async: 300
+      poll: 0
